--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple webpage to fetch and display data from an API based on user input.">
     <title>Data for selected country</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" type="module"></script>
