add: "traveled to" section

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </nav>
 
     <div class="pages-container">
-        <aside class="container visited-sidebar" id="visited-page" style="display: none;">
-            <h2 class="visited-title">Favorites</h2>
-            <article id="visited"></article>
+        <aside class="container traveled-sidebar" id="traveled-page" style="display: none;">
+            <h2 class="main-traveled-title">Already traveled to:</h2>
+            <article id="traveled"></article>
         </aside>
 
-        <main class="container main-content">
+        <main class="container main-content">   
             <section id="main-page" class="page active">
                 <header>
                     <p class="title">Please type the name of the country: <p>
